# world-feeling

./: alldata.txt  code.txt  contact.txt  database.db  description.txt  feelings.txt  feelings_time.txt  ipaddress.txt  main.py  pyproject.toml
static/: pixelbutton.css  styles.css
templates/: contact.html  contactsent.html  contactsuccess.html  feeling.html  index.html
